--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -10567,6 +10567,13 @@ Interpolate all the blank elements of the second popped operand with the median 
 The number of the nearest non-blank neighbors used to calculate the median is given by the first popped operand.
 Note that the distance of the nearest non-blank neighbors is irrelevant in this interpolation.
 
+@item interpolate-minngb
+Similar to @code{interpolate-medianngb}, but will fill the blank values of the dataset with the minimum value of the nearest neighbors.
+
+@item interpolate-maxngb
+Similar to @code{interpolate-medianngb}, but will fill the blank values of the dataset with the maximum value of the nearest neighbors.
+One useful implementation of this operator is to fill the saturated pixels of stars in images.
+
 @item collapse-sum
 Collapse the given dataset (second popped operand), by summing all elements along the first popped operand (a dimension in FITS standard: counting from one, from fastest dimension).
 The returned dataset has one dimension less compared to the input.
@@ -24992,54 +24999,59 @@ is much faster.
 
 @cindex Sky line
 @cindex Interpolation
-During data analysis, it happens that parts of the data cannot be given a
-value, but one is necessary for the higher-level analysis. For example a
-very bright star saturated part of your image and you need to fill in the
-saturated pixels with some values. Another common usage case are masked
-sky-lines in 1D spectra that similarly need to be assigned a value for
-higher-level analysis. In other situations, you might want a value in an
-arbitrary point: between the elements/pixels where you have data. The
-functions described in this section are for such operations.
+During data analysis, it happens that parts of the data cannot be given a value, but one is necessary for the higher-level analysis.
+For example a very bright star saturated part of your image and you need to fill in the saturated pixels with some values.
+Another common usage case are masked sky-lines in 1D spectra that similarly need to be assigned a value for higher-level analysis.
+In other situations, you might want a value in an arbitrary point: between the elements/pixels where you have data.
+The functions described in this section are for such operations.
 
 @cindex GNU Scientific Library
-The parametric interpolations discussed below are wrappers around the
-interpolation functions of the GNU Scientific Library (or GSL, see @ref{GNU
-Scientific Library}). To identify the different GSL interpolation types,
-Gnuastro's @file{gnuastro/interpolate.h} header file contains macros that
-are discussed below. The GSL wrappers provided here are not yet complete
-because we are too busy. If you need them, please consider helping us in
-adding them to Gnuastro's library. Your would be very welcome and
-appreciated.
+The parametric interpolations discussed below are wrappers around the interpolation functions of the GNU Scientific Library (or GSL, see @ref{GNU Scientific Library}).
+To identify the different GSL interpolation types, Gnuastro's @file{gnuastro/interpolate.h} header file contains macros that are discussed below.
+The GSL wrappers provided here are not yet complete because we are too busy.
+If you need them, please consider helping us in adding them to Gnuastro's library.
+Your would be very welcome and appreciated.
 
-@deftypefun {gal_data_t *} gal_interpolate_close_neighbors (gal_data_t @code{*input}, struct gal_tile_two_layer_params @code{*tl}, size_t @code{numneighbors}, size_t @code{numthreads}, int @code{onlyblank}, int @code{aslinkedlist})
-Interpolate the values in the image using the median value of their
-@code{numneighbors} closest neighbors. This function is non-parametric and
-thus agnostic to the input's number of dimension. If @code{onlyblank} is
-non-zero, then only blank elements will be interpolated and pixels that
-already have a value will be left untouched. This function is
-multi-threaded and will run on @code{numthreads} threads (see
-@code{gal_threads_number} in @ref{Multithreaded programming}).
+@deffn Macro GAL_INTERPOLATE_NEIGHBORS_METRIC_RADIAL
+@deffnx Macro GAL_INTERPOLATE_NEIGHBORS_METRIC_MANHATTAN
+@deffnx Macro GAL_INTERPOLATE_NEIGHBORS_METRIC_INVALID
+The metric used to find distance for nearest neighbor interpolation.
+A radial metric uses the simple Euclidean function to find the distance between two pixels.
+A manhattan metric will always be an integer and is like steps (but is also much faster to calculate than radial metric because it doesn't need a square root calculation).
+@end deffn
 
-@code{tl} is Gnuastro's two later tessellation structure used to define
-tiles over an image and is fully described in @ref{Tile grid}. When
-@code{tl!=NULL}, then it is assumed that the @code{input->array} contains
-one value per tile and interpolation will respect certain tessellation
-properties, for example to not interpolate over channel borders.
+@deffn Macro GAL_INTERPOLATE_NEIGHBORS_FUNC_MIN
+@deffnx Macro GAL_INTERPOLATE_NEIGHBORS_FUNC_MAX
+@deffnx Macro GAL_INTERPOLATE_NEIGHBORS_FUNC_MEDIAN
+@deffnx Macro GAL_INTERPOLATE_NEIGHBORS_FUNC_INVALID
+@cindex Saturated stars
+The various types of nearest-neighbor interporation functions for @code{gal_interpolate_neighbors}.
+The names are descriptive for the operation they do, so we won't go into much more detail here.
+The median operator will be one of the most used, but operators like the maximum are good to fill the center of saturated stars.
+@end deffn
 
-If several datasets have the same set of blank values, you don't need to
-call this function multiple times. When @code{aslinkedlist} is non-zero,
-then @code{input} will be seen as a @ref{List of gal_data_t}. In this case,
-the same neighbors will be used for all the datasets in the list. Of
-course, the values for each dataset will be different, so a different value
-will be written in the each dataset, but the neighbor checking that is the
-most CPU intensive part will only be done once.
+@deftypefun {gal_data_t *} gal_interpolate_neighbors (gal_data_t @code{*input}, struct gal_tile_two_layer_params @code{*tl}, uint8_t @code{metric}, size_t @code{numneighbors}, size_t @code{numthreads}, int @code{onlyblank}, int @code{aslinkedlist}, int @code{function})
 
-This is a non-parametric and robust function for interpolation. The
-interpolated values are also always within the range of the non-blank
-values and strong outliers do not get created. However, this type of
-interpolation must be used with care when there are gradients. This is
-because it is non-parametric and if there aren't enough neighbors,
-step-like features can be created.
+Interpolate the values in the input dataset using a calculated statistics from the distribution of their @code{numneighbors} closest neighbors.
+The desired statistics is determined from the @code{func} argument, which takes any of the @code{GAL_INTERPOLATE_NEIGHBORS_FUNC_} macros (see above).
+This function is non-parametric and thus agnostic to the input's number of dimension or shape of the distribution.
+
+Distance can be defined on different metrics that are dentified through @code{metric} (taking values determined by the @code{GAL_INTERPOLATE_NEIGHBORS_METRIC_} macros described above).
+If @code{onlyblank} is non-zero, then only blank elements will be interpolated and pixels that already have a value will be left untouched.
+This function is multi-threaded and will run on @code{numthreads} threads (see @code{gal_threads_number} in @ref{Multithreaded programming}).
+
+@code{tl} is Gnuastro's tessellation structure used to define tiles over an image and is fully described in @ref{Tile grid}.
+When @code{tl!=NULL}, then it is assumed that the @code{input->array} contains one value per tile and interpolation will respect certain tessellation properties, for example to not interpolate over channel borders.
+
+If several datasets have the same set of blank values, you don't need to call this function multiple times.
+When @code{aslinkedlist} is non-zero, then @code{input} will be seen as a @ref{List of gal_data_t}.
+In this case, the same neighbors will be used for all the datasets in the list.
+Of course, the values for each dataset will be different, so a different value will be written in the each dataset, but the neighbor checking that is the most CPU intensive part will only be done once.
+
+This is a non-parametric and robust function for interpolation.
+The interpolated values are also always within the range of the non-blank values and strong outliers do not get created.
+However, this type of interpolation must be used with care when there are gradients.
+This is because it is non-parametric and if there aren't enough neighbors, step-like features can be created.
 @end deftypefun
 
 @deffn Macro GAL_INTERPOLATE_1D_INVALID
