--- a/NEWS
+++ b/NEWS
@@ -121,6 +121,7 @@ See the end of the file for license conditions.
   bug #58835: Floating point errors when comparing pixel scale in Crop.
   bug #58898: Plain text string columns touching next, clear first character.
   bug #58901: Blank values for non-standard integer types in FITS tables.
+  bug #58974: WCS conversion not reasonable on processed TPV data.
 
 
 
