Library (fits.h): optionally free units when writing keywords
When the 'gal_fits_key_write_ptr' writes the given keywords into the FITS
file, it immediately frees all the given components (if
requested). However, until now it no option on what to do with the 'unit'
argument. This was not complete and could cause confusion.

With this commit, an extra 'ufree' argument has been added to the
'gal_fits_key_list_add' and 'gal_fits_key_list_add_end' functions to allow
freeing the unit string optionally also.

Furthermore, to help in using 'gal_fits_key_write', a fully working example
has been added to the book.

--- a/NEWS
+++ b/NEWS
@@ -103,6 +103,8 @@ See the end of the file for license conditions.
      changed).
 
   Library:
+   - gal_fits_key_list_add: new 'ufree' argument to optionally free units.
+   - gal_fits_key_list_add_end: similar to 'gal_fits_key_list_add'.
    - gal_interpolate_neighbors: new name for gal_interpolate_close_neighbors.
    - gal_statistics_outlier_bydistance: new name for the old
      'gal_statistics_outlier_positive'. It can now use the same algorithm
